L23-noSQL fix sonar 1